Added ability to customize container logging via $LOGGING_OPTS variable